--- a/luigi_mansion/luigi_mansion/params.yaml
+++ b/luigi_mansion/luigi_mansion/params.yaml
@@ -4,9 +4,7 @@ luigi_mansion:
     map_topic: "/map"
     scan_topic: "/scan"
     odom_topic: "/odom"	
-    drive_topic: "/vesc/low_level/input/navigation"
-    speed: 1.0
-    detector_drive_topic: "/vesc/low_level/input/nav2"
+    drive_topic: "/drive"
 
     # The frame you should publish your transform to
     particle_filter_frame: "/base_link_pf"
